LAU-857 revert to plain disposer