@@ -103,6 +103,7 @@ tasks.withType(JavaExec).configureEach {
 test {
   useJUnitPlatform()
   failFast = true
+  jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 task functional(type: Test) {
@@ -231,14 +232,7 @@ def versions = [
   lombok            : '1.18.32'
 ]
 
-
 dependencies {
-
-  modules {
-    module("com.google.collections:google-collections") {
-      replacedBy("com.google.guava:guava", "google-collections is part of guava")
-    }
-  }
 
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
@@ -246,50 +240,33 @@ dependencies {
   implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.3'
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.2'
   implementation group: 'com.microsoft.azure', name: 'applicationinsights-web', version: '3.5.1'
-  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
+  implementation group: 'io.rest-assured', name: 'rest-assured', version: '5.4.0'
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-  implementation group: 'io.rest-assured', name: 'rest-assured'
-  implementation group: 'jakarta.ws.rs', name: 'jakarta.ws.rs-api', version: '3.1.0'
-  implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: versions.jersey
-  implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: versions.jersey
-  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.1'
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-  annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
 
   compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-  testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
-  testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: versions.cucumber
-  testImplementation group: 'io.cucumber', name: 'cucumber-java', version: versions.cucumber
-  testImplementation group: 'org.wiremock', name: 'wiremock-standalone', version: '3.5.2'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.1'
   testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-  testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.1'
-
-  testImplementation(platform(group: 'org.junit', name: 'junit-bom', version: '5.10.2'))
-  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
+  testImplementation group: 'io.cucumber', name: 'cucumber-java', version: versions.cucumber
+  testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: versions.cucumber
+  testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-  testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
-  testImplementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: '0.5'
+  testImplementation group: 'org.wiremock', name: 'wiremock-standalone', version: '3.5.2'
 
   testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
-  integrationTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '4.1.2'
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
 
-  testImplementation 'com.github.hmcts:fortify-client:1.4.1:all'
-
   integrationTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
   integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
+  functionalTestImplementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
   functionalTestImplementation sourceSets.main.runtimeClasspath
   functionalTestImplementation sourceSets.test.runtimeClasspath
 }
